[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/MinimalUI.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.14902, 0.164706, 0.588235 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 253.0
margin_top = 111.0
margin_right = 770.0
margin_bottom = 489.0
theme = ExtResource( 1 )
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 517.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "Paused Game"
align = 1
valign = 1

[node name="White_Space" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 517.0
margin_bottom = 120.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 517.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
icon_align = 1

[node name="Return_to_Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 517.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 3 )
text = "Return to Menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 517.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Return_to_Menu" to="." method="_on_Return_to_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
